--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
     <modules>
         <module>crud</module>
         <module>importer</module>
+        <module>rs</module>
     </modules>
 
     <dependencyManagement>
