--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>crud</module>
         <module>importer</module>
         <module>rs</module>
+        <module>api</module>
     </modules>
 
     <dependencyManagement>
