--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,12 @@
             <!-- Inter-Module dependencies -->
             <!-- 
 			-->
-            <dependency>
+			<dependency>
+				<groupId>junit</groupId>
+				<artifactId>junit</artifactId>
+				<version>4.8.1</version>
+			</dependency>
+			<dependency>
                 <groupId>uk.org.nbn</groupId>
                 <artifactId>nbnv-crud</artifactId>
                 <version>${project.version}</version>
@@ -54,5 +59,6 @@
             <url>http://scala-tools.org/repo-releases</url>
         </pluginRepository>
     </pluginRepositories>
+
 
 </project>
