--- a/api/pom.xml
+++ b/api/pom.xml
@@ -18,8 +18,9 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <netbeans.hint.deploy.server>Tomcat</netbeans.hint.deploy.server>
     </properties>
-	
+
     <build>
         <plugins>
             <plugin>
