Moved model classes to their own module

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>importer</module>
         <module>rs</module>
         <module>api</module>
+        <module>api.model</module>
         <module>portal</module>
     </modules>
 
