--- a/portal/pom.xml
+++ b/portal/pom.xml
@@ -67,7 +67,11 @@
             <artifactId>freemarker</artifactId>
             <version>2.3.19</version>
         </dependency>
-
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>nbnv-api-model</artifactId>
+            <version>${project.version}</version>
+        </dependency>
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
