--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 
     <properties>
         <scala.version>2.8.2</scala.version>
+        <jersey.version>1.13</jersey.version>
     </properties>
 
     <modules>
