--- a/portal/src/main/webapp/WEB-INF/web.xml
+++ b/portal/src/main/webapp/WEB-INF/web.xml
@@ -24,7 +24,7 @@
  
     <servlet-mapping>
         <servlet-name>portal</servlet-name>
-        <url-pattern>/*</url-pattern>
+        <url-pattern>*.html</url-pattern>
     </servlet-mapping>
  
     <welcome-file-list>
