--- a/portal/pom.xml
+++ b/portal/pom.xml
@@ -60,7 +60,7 @@
             <plugin>
                 <groupId>de.saumya.mojo</groupId>
                 <artifactId>gem-maven-plugin</artifactId>
-                <version>0.20.0</version>
+                <version>0.28.6</version>
                 <extensions>true</extensions>
                 <executions>
                     <execution>
@@ -71,7 +71,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <execArgs>${project.build.directory}/rubygems/bin/compass compile ${basedir}/src/main/sass</execArgs>
+                    <execArgs>"${project.build.directory}/rubygems/bin/compass" compile "${basedir}/src/main/sass"</execArgs>
                 </configuration>
             </plugin>
         </plugins>
