--- a/importer/pom.xml
+++ b/importer/pom.xml
@@ -39,6 +39,18 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
         </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.scalamock</groupId>-->
+            <!--<artifactId>scalamock-scalatest-support_2.10.0-M5</artifactId>-->
+            <!--<version>3.0-M2</version>-->
+            <!--<scope>test</scope>-->
+        <!--</dependency>-->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.9.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
