google guice is working with scala

--- a/importer/pom.xml
+++ b/importer/pom.xml
@@ -39,6 +39,10 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.google.inject</groupId>
+            <artifactId>guice</artifactId>
+        </dependency>
         <!--<dependency>-->
             <!--<groupId>org.scalamock</groupId>-->
             <!--<artifactId>scalamock-scalatest-support_2.10.0-M5</artifactId>-->
