--- a/importer/pom.xml
+++ b/importer/pom.xml
@@ -64,6 +64,7 @@
             <plugin>
                 <groupId>org.scala-tools</groupId>
                 <artifactId>maven-scala-plugin</artifactId>
+                <version>2.15.2</version>
                 <executions>
                     <execution>
                         <id>compile</id>
@@ -94,6 +95,7 @@
 		<plugin>
 		  <groupId>org.apache.maven.plugins</groupId>
 		  <artifactId>maven-surefire-plugin</artifactId>
+          <version>2.10</version>
 		  <configuration>
 			<includes>
 			  <include>**/*Spec.class</include>
