--- a/importer/pom.xml
+++ b/importer/pom.xml
@@ -87,21 +87,16 @@
                     <!--</includes>-->
                 <!--</configuration>-->
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <includes>
+                        <!-- use the ScalaTest naming convention  -->
+                        <include>**/*Suite.java</include>
+                    </includes>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
-	
-	<reporting>
-	  <plugins>
-		<plugin>
-		  <groupId>org.apache.maven.plugins</groupId>
-		  <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.10</version>
-		  <configuration>
-			<includes>
-			  <include>**/*Spec.class</include>
-			</includes>
-		  </configuration>
-		</plugin>
-	  </plugins>
-	</reporting>
 </project>
