--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,15 @@
     </modules>
 	
 	<build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.10</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -43,9 +52,6 @@
 
     <dependencyManagement>
         <dependencies>
-            <!-- Inter-Module dependencies -->
-            <!-- 
-			-->
 			<dependency>
 				<groupId>junit</groupId>
 				<artifactId>junit</artifactId>
