--- a/api/pom.xml
+++ b/api/pom.xml
@@ -110,6 +110,14 @@
             <version>1.1.0</version>
         </dependency>
         
+        <!--Servlet API-->
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-web-api</artifactId>
+            <version>6.0</version>
+            <scope>provided</scope>
+        </dependency>
+        
         <!--Test-->
         <dependency>
             <groupId>com.sun.jersey.jersey-test-framework</groupId>
