--- a/portal/src/main/webapp/WEB-INF/web.xml
+++ b/portal/src/main/webapp/WEB-INF/web.xml
@@ -43,6 +43,14 @@
         <welcome-file>index.ftl</welcome-file>
     </welcome-file-list>
     <filter>
+        <filter-name>PowerlessTemplateURLParameterisationFilter</filter-name>
+        <filter-class>uk.gov.nbn.data.powerless.PowerlessTemplateURLParameterisationFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>PowerlessTemplateURLParameterisationFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+    <filter>
         <filter-name>PowerlessTemplateExceptionFilter</filter-name>
         <filter-class>uk.gov.nbn.data.powerless.PowerlessTemplateExceptionFilter</filter-class>
     </filter>
