Test for valid NXF file

--- a/importer.ui/src/main/webapp/WEB-INF/web.xml
+++ b/importer.ui/src/main/webapp/WEB-INF/web.xml
@@ -28,6 +28,6 @@
     </servlet-mapping>
  
     <welcome-file-list>
-        <welcome-file>home.jsp</welcome-file>
+        <welcome-file>upload.html</welcome-file>
     </welcome-file-list>
 </web-app>
