--- a/importer/pom.xml
+++ b/importer/pom.xml
@@ -79,11 +79,6 @@
                         <phase>test-compile</phase>
                     </execution>
                 </executions>
-                <!--<configuration>-->
-                    <!--<includes>-->
-                        <!--<include>**/*Suite.class</include>-->
-                    <!--</includes>-->
-                <!--</configuration>-->
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -94,6 +89,18 @@
                         <include>**/*Suite.java</include>
                     </includes>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>integration-test</goal>
+                            <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
