--- a/importer.ui/pom.xml
+++ b/importer.ui/pom.xml
@@ -71,6 +71,11 @@
             <version>0.9.8</version>
         </dependency>
         <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>2.2.2</version>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <version>6.0</version>
