--- a/api/pom.xml
+++ b/api/pom.xml
@@ -131,6 +131,11 @@
             <scope>provided</scope>
         </dependency>
         
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.6.6</version>
+        </dependency>
         <!--Test-->
         <dependency>
             <groupId>com.sun.jersey.jersey-test-framework</groupId>
