--- a/importer.ui/pom.xml
+++ b/importer.ui/pom.xml
@@ -86,6 +86,11 @@
             <version>3.8</version>
         </dependency>
         <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>nbnv-crud</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <version>6.0</version>
