--- a/importer/pom.xml
+++ b/importer/pom.xml
@@ -53,6 +53,10 @@
 		  <groupId>log4j</groupId>
 		  <artifactId>log4j</artifactId>
 		</dependency>
+        <dependency>
+            <groupId>com.google.inject</groupId>
+            <artifactId>guice</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
