Adding User Provider for token users Default ttl is 1 second, need a more resonable value Created public user static instance in api Added Cookie adding jersey services

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -61,6 +61,11 @@
             <artifactId>jersey-json</artifactId>
             <version>${jersey.version}</version>
         </dependency>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.6</version>
+        </dependency>
  
         <!-- Jersey + Spring -->
         <dependency>
