--- a/importer.ui/src/main/resources/settings.properties
+++ b/importer.ui/src/main/resources/settings.properties
@@ -1,7 +1,11 @@
 
 # this is a comment
 
-javax.persistence.jdbc.url=jdbc:sqlserver://nbnsql-b;databaseName=NBNCore
+#javax.persistence.jdbc.url=jdbc:sqlserver://nbnsql-b;databaseName=NBNCore
+#javax.persistence.jdbc.password=Ecowaswashere9
+#javax.persistence.jdbc.user=NBNImporter
+
+javax.persistence.jdbc.url=jdbc:sqlserver://sql-spatial;databaseName=NBNCore
 javax.persistence.jdbc.password=Ecowaswashere9
 javax.persistence.jdbc.user=NBNImporter
 
