--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
         <module>api.model</module>
         <module>api</module>
         <module>portal</module>
-        <module>gis.security</module>
+        <module>gis</module>
     </modules>
 	
     <build>
