Adding a new properties project, extracting logic from the portal project

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
     </properties>
 
     <modules>
+        <module>properties</module>
         <module>crud</module>
         <module>fidelity</module>
         <module>importer</module>
