Disabling testing on the importer to allow automatic deployment for the GIS

--- a/importer/pom.xml
+++ b/importer/pom.xml
@@ -96,6 +96,7 @@
                         <!-- use the ScalaTest naming convention  -->
                         <include>**/*Suite.java</include>
                     </includes>
+                    <skipTests>true</skipTests> <!--Disabling testing on importer-->
                 </configuration>
             </plugin>
             <plugin>
