--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
         <module>properties</module>
         <module>crud</module>
         <module>fidelity</module>
-        <module>importer</module>
+        <!--<module>importer</module>-->
         <module>importer.ui</module>
         <module>rs</module>
         <module>api.model</module>
