remove fidelity module to see if that helps IDE probs

--- a/pom.xml
+++ b/pom.xml
@@ -23,8 +23,7 @@
     <modules>
         <module>properties</module>
         <module>crud</module>
-        <module>fidelity</module>
-        <!--<module>importer</module>-->
+        <module>importer</module>
         <module>importer.ui</module>
         <module>rs</module>
         <module>api.model</module>
