Enabling token authentication

--- a/gis/src/main/webapp/WEB-INF/web.xml
+++ b/gis/src/main/webapp/WEB-INF/web.xml
@@ -9,8 +9,12 @@
         <servlet-name>MapServerServlet</servlet-name>
         <url-pattern>/*</url-pattern>
     </servlet-mapping>
-    <!--<filter>
+    <filter>
         <filter-name>MapAuthenticationFilter</filter-name>
-        <filter-class>uk.gov.nbn.data.gis.MapServerNBNAuthenticationFilter</filter-class>
-    </filter>-->
+        <filter-class>uk.gov.nbn.data.gis.filters.MapServerNBNAuthenticationFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>MapAuthenticationFilter</filter-name>
+        <url-pattern>/*</url-pattern>        
+    </filter-mapping>
 </web-app>
