--- a/api/src/main/webapp/WEB-INF/web.xml
+++ b/api/src/main/webapp/WEB-INF/web.xml
@@ -20,8 +20,7 @@
             <param-value>true</param-value>
         </init-param>
         <init-param>
-            <param-name>com.sun.jersey.config.property.packages</param-name>
-            <param-value>uk.org.nbn.nbnv.api.rest</param-value>
+            config<param-value>uk.org.nbn.nbnv.api.rest</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
