--- a/importer/pom.xml
+++ b/importer/pom.xml
@@ -44,6 +44,11 @@
             <artifactId>guice</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.sonatype.sisu.inject</groupId>
+            <artifactId>guice-persist</artifactId>
+            <version>3.1.2</version>
+        </dependency>
+        <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-all</artifactId>
             <version>1.9.0</version>
