--- a/gis/pom.xml
+++ b/gis/pom.xml
@@ -14,6 +14,13 @@
     <name>${project.artifactId}-${project.version}</name>
     <url>http://maven.apache.org</url>
     <dependencies>
+        <!--NBN Gateway API-->
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>nbnv-api-model</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
@@ -24,6 +31,16 @@
             <artifactId>extcos</artifactId>
             <version>0.3b</version>
         </dependency>
+        <dependency>
+            <groupId>com.sun.jersey</groupId>
+            <artifactId>jersey-json</artifactId>
+            <version>${jersey.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.jersey</groupId>
+            <artifactId>jersey-client</artifactId>
+            <version>${jersey.version}</version>
+        </dependency>  
         <dependency>
             <groupId>EDU.umn.gis</groupId>
             <artifactId>mapscript</artifactId>
