mid changes for feature ingestion

--- a/importer/pom.xml
+++ b/importer/pom.xml
@@ -53,6 +53,11 @@
 		  <groupId>log4j</groupId>
 		  <artifactId>log4j</artifactId>
 		</dependency>
+        <dependency>
+            <groupId>uk.org.mygrid.resources.jcoord</groupId>
+            <artifactId>jcoord</artifactId>
+            <version>1.0</version>
+        </dependency>
     </dependencies>
 
     <build>
