--- a/api/src/main/resources/api.properties
+++ b/api/src/main/resources/api.properties
@@ -1,5 +1,6 @@
 # The following properties file defines the some constants which are required
-# in order to power some of the maps defined in this gis project
-api = http://localhost:8084/api
-spatialConnection = Server=NBNSQL-B;Database=NBNWarehouse;uid=NBNImporter;pwd=Ecowaswashere9;Integrated Security=True
-ordnanceSurveyMapDataLocation = D:\Modern\
+# in order to power some SSO and other aspects of the API project
+
+sso_token_default_ttl = 1209600000
+sso_token_key = nbn.token_key
+sso_token_domain = localhost
