--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,11 @@
             <id>gbif-all</id>
             <url>http://repository.gbif.org/content/groups/gbif</url>
         </repository>
+        <repository>
+            <id>osgeo</id>
+            <name>Open Source Geospatial Foundation Repository</name>
+            <url>http://download.osgeo.org/webdav/geotools/</url>
+        </repository>
     </repositories>
 	
     <pluginRepositories>
