Starting transitioning away from using mapscript

--- a/gis/pom.xml
+++ b/gis/pom.xml
@@ -58,13 +58,18 @@
             <groupId>com.sun.jersey</groupId>
             <artifactId>jersey-client</artifactId>
             <version>${jersey.version}</version>
-        </dependency>  
-        <dependency>
-            <groupId>EDU.umn.gis</groupId>
-            <artifactId>mapscript</artifactId>
-            <version>3.0.6</version>
-            <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <version>2.3.14</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+            
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
