Setting the correct path to the os modern folder

--- a/gis/src/main/resources/gis.properties
+++ b/gis/src/main/resources/gis.properties
@@ -3,4 +3,4 @@
 mapserver = http://localhost/fcgi-bin/mapserv.exe
 api = http://localhost:8084/api
 spatialConnection = Server=NBNSQL-B;Database=NBNWarehouse;uid=NBNImporter;pwd=Ecowaswashere9;Integrated Security=True
-ordnanceSurveyMapDataLocation = D:\Modern\
+ordnanceSurveyMapDataLocation = D:\Modern
