NBNV-151 sorted out dataset selection interactions

--- a/portal/src/main/resources/powerless-global.properties
+++ b/portal/src/main/resources/powerless-global.properties
@@ -3,3 +3,4 @@
 # application. These can be server specifically overwritten by creating a file
 # in the folder /server/overload/ with the same file name
 api = http://localhost:8084/api
+gis = http://localhost:8084/nbnv-gis-0.1-SNAPSHOT
