Added Cobertura to test for coverage in Java, minor comments to Nbnv163Validator

--- a/importer.ui/pom.xml
+++ b/importer.ui/pom.xml
@@ -21,6 +21,16 @@
         <netbeans.hint.deploy.server>Tomcat</netbeans.hint.deploy.server>
     </properties>
     
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>cobertura-maven-plugin</artifactId>
+                <version>2.5.2</version>
+            </plugin>
+        </plugins>
+    </reporting>    
+    
     <build>
         <plugins>
             <plugin>
