Creating second datasource for core data

--- a/api/src/main/resources/api.properties
+++ b/api/src/main/resources/api.properties
@@ -1,12 +1,20 @@
 # The following properties file defines the some constants which are required
 # in order to power some SSO and other aspects of the API project
 
+# Define Signle Sign on defaults
 sso_token_default_ttl = 1209600000
 sso_token_key = nbn.token_key
 sso_token_domain = 
 
+# Define location of Solr Server
 solr_url = http://staging.testnbn.net/solr
 
+# Define the connection properties for the CORE database
+db_core_url = jdbc:sqlserver://nbnsql-b.nerc-lancaster.ac.uk;databaseName=NBNCore
+db_core_username = NBNImporter
+db_core_password = Ecowaswashere9
+
+# Define the connection properties for the WAREHOUSE database
 db_warehouse_url = jdbc:sqlserver://nbnsql-b.nerc-lancaster.ac.uk;databaseName=NBNWarehouse
 db_warehouse_username = NBNImporter
 db_warehouse_password = Ecowaswashere9
