NBNV-166 more filter work on grid map

--- a/importer.ui/src/main/resources/settings.properties
+++ b/importer.ui/src/main/resources/settings.properties
@@ -5,7 +5,7 @@
 #javax.persistence.jdbc.password=Ecowaswashere9
 #javax.persistence.jdbc.user=NBNImporter
 
-javax.persistence.jdbc.url=jdbc:sqlserver://sql-spatial;databaseName=NBNCore
+javax.persistence.jdbc.url=jdbc:sqlserver://nbnsql-b;databaseName=NBNCore
 javax.persistence.jdbc.password=Ecowaswashere9
 javax.persistence.jdbc.user=NBNImporter
 
