Adding acknowledgement ftl which works the same as the original

--- a/gis/src/main/resources/gis.properties
+++ b/gis/src/main/resources/gis.properties
@@ -5,3 +5,7 @@ api = http://localhost:8084/api
 spatialConnection = Server=NBNSQL-B;Database=NBNWarehouse;uid=NBNImporter;pwd=Ecowaswashere9;Integrated Security=True
 ordnanceSurveyMapDataLocation = E:\Modern
 ordnanceSurveyAllowedReferrerPrefix = http://localhost:8084/
+
+# The following property locates the root of the NBN Gateway Portal which links
+# from the acknowledgement pages are based from.
+portal = http://localhost:8084
