Increaseing build memory for scala

--- a/importer/pom.xml
+++ b/importer/pom.xml
@@ -92,6 +92,12 @@
                         <phase>test-compile</phase>
                     </execution>
                 </executions>
+                <configuration>
+                    <jvmArgs>
+                        <jvmArg>-Xms64m</jvmArg>
+                        <jvmArg>-Xmx1024m</jvmArg>
+                    </jvmArgs>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
