creating a solr project with the solr home bundled inside

--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
         <module>importer.ui</module>
         <module>rs</module>
         <module>api.model</module>
+        <module>api.solr</module>
         <module>api</module>
         <module>portal</module>
         <module>gis</module>
