Updating to latest version of jquery fixing some issues with doing the above using a data table to populate species list

--- a/imt/pom.xml
+++ b/imt/pom.xml
@@ -146,6 +146,8 @@
                                 <include>mapping/construction/WidgetOptionsCreator-createNBNBoundaryLayer.js</include>
                                 <include>mapping/InteractiveMappingClient.js</include>
                                 <include>mapping/InteractiveMappingClient-getMapURL.js</include>
+                                
+                                <include>mapping/construction/species/createTaxonSelectionTable.js</include>
                             </includes>
                         </aggregation>
                         <aggregation>
