Storing default filter state for SwitchableArcGisMapFilters Specifing location of solr server on

--- a/api/src/main/resources/api.properties
+++ b/api/src/main/resources/api.properties
@@ -7,7 +7,7 @@ sso_token_key = nbn.token_key
 sso_token_domain = 
 
 # Define location of Solr Server
-solr_url = http://staging.testnbn.net/solr
+solr_url = http://staging.testnbn.net:7000/solr
 
 # Define the connection properties for the CORE database
 db_core_url = jdbc:sqlserver://nbnsql-b.nerc-lancaster.ac.uk;databaseName=NBNCore
