Adding e-mail and user registering functionality to the api

--- a/api/src/main/resources/api.properties
+++ b/api/src/main/resources/api.properties
@@ -18,3 +18,8 @@ db_core_password = Ecowaswashere9
 db_warehouse_url = jdbc:sqlserver://nbnsql-b.nerc-lancaster.ac.uk;databaseName=NBNWarehouse
 db_warehouse_username = NBNImporter
 db_warehouse_password = Ecowaswashere9
+
+# Define the emailer properties
+email_host = smtp.nerc-lancaster.ac.uk
+email_port = 25
+email_from = NBNGateway@nbn.org.uk
