--- a/api/pom.xml
+++ b/api/pom.xml
@@ -130,6 +130,23 @@
             </exclusions>
         </dependency>            
          
+        <!--Email-->
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>1.4.5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <version>2.3.19</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.6</version>
+        </dependency>
+        
         <!--Database -->        
         <dependency>
             <groupId>com.microsoft.sqlserver</groupId>
